[package]
name = "testaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vk-parse = "0.14"
regex = "1.10"
heck = "0.4"
vkxml = "0.3"
generator = { git = "https://github.com/ash-rs/ash", commit = "67ac59aa70d086ae3291382f25921074fa8443a7" }
